# lite_api_server

./: .gitignore  Cargo.toml  README.md  config.example.yaml
.github/workflows/: check.yml
deploy/systemd/: lite-api-server.service
docs/: API.md  ARCHITECTURE.md  CONNECTOR_SAFETY_NOTES.md  REFERENCE_AUDIT.md  REFERENCE_MAP.md  ROUTING.md  SMOKE_TEST.md
src/: main.rs
src/api/: admin.rs  diagnostics.rs  gemini.rs  health.rs  mod.rs  oauth.rs  openai.rs
src/core/: config.rs  diagnostics.rs  mod.rs  provider.rs  router.rs  state.rs
src/telemetry/: store.rs
